--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-*.class
-
-# Package Files #
-*.jar
-*.war
-*.ear
+target/
+.project
+.classpath
+.settings/
+.idea/
+.patch
+*.iml
+.DS_Store
+.directory
+.codepro/
